include/codata_constants_2018.h

ADD_IMPORT extern const int YEAR_2018;
ADD_IMPORT extern const double ALPHA_PARTICLE_ELECTRON_MASS_RATIO_2018;/**<  */
ADD_IMPORT extern const double U_ALPHA_PARTICLE_ELECTRON_MASS_RATIO_2018;/**<  */
ADD_IMPORT extern const double ALPHA_PARTICLE_MASS_2018;/**< kg */
ADD_IMPORT extern const double U_ALPHA_PARTICLE_MASS_2018;/**< kg */
ADD_IMPORT extern const double ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_2018;/**< J */
ADD_IMPORT extern const double U_ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_2018;/**< J */
ADD_IMPORT extern const double ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_IN_MEV_2018;/**< MeV */
ADD_IMPORT extern const double U_ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_IN_MEV_2018;/**< MeV */
ADD_IMPORT extern const double ALPHA_PARTICLE_MASS_IN_U_2018;/**< u */
ADD_IMPORT extern const double U_ALPHA_PARTICLE_MASS_IN_U_2018;/**< u */
ADD_IMPORT extern const double ALPHA_PARTICLE_MOLAR_MASS_2018;/**< kg mol^-1 */
ADD_IMPORT extern const double U_ALPHA_PARTICLE_MOLAR_MASS_2018;/**< kg mol^-1 */
ADD_IMPORT extern const double ALPHA_PARTICLE_PROTON_MASS_RATIO_2018;/**<  */
ADD_IMPORT extern const double U_ALPHA_PARTICLE_PROTON_MASS_RATIO_2018;/**<  */
ADD_IMPORT extern const double ALPHA_PARTICLE_RELATIVE_ATOMIC_MASS_2018;/**<  */
ADD_IMPORT extern const double U_ALPHA_PARTICLE_RELATIVE_ATOMIC_MASS_2018;/**<  */
ADD_IMPORT extern const double ANGSTROM_STAR_2018;/**< m */
ADD_IMPORT extern const double U_ANGSTROM_STAR_2018;/**< m */
ADD_IMPORT extern const double ATOMIC_MASS_CONSTANT_2018;/**< kg */
ADD_IMPORT extern const double U_ATOMIC_MASS_CONSTANT_2018;/**< kg */
ADD_IMPORT extern const double ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_2018;/**< J */
ADD_IMPORT extern const double U_ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_2018;/**< J */
ADD_IMPORT extern const double ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_IN_MEV_2018;/**< MeV */
ADD_IMPORT extern const double U_ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_IN_MEV_2018;/**< MeV */
ADD_IMPORT extern const double ATOMIC_MASS_UNIT_ELECTRON_VOLT_RELATIONSHIP_2018;/**< eV */
ADD_IMPORT extern const double U_ATOMIC_MASS_UNIT_ELECTRON_VOLT_RELATIONSHIP_2018;/**< eV */
ADD_IMPORT extern const double ATOMIC_MASS_UNIT_HARTREE_RELATIONSHIP_2018;/**< E_h */
ADD_IMPORT extern const double U_ATOMIC_MASS_UNIT_HARTREE_RELATIONSHIP_2018;/**< E_h */
ADD_IMPORT extern const double ATOMIC_MASS_UNIT_HERTZ_RELATIONSHIP_2018;/**< Hz */
ADD_IMPORT extern const double U_ATOMIC_MASS_UNIT_HERTZ_RELATIONSHIP_2018;/**< Hz */
ADD_IMPORT extern const double ATOMIC_MASS_UNIT_INVERSE_METER_RELATIONSHIP_2018;/**< m^-1 */
ADD_IMPORT extern const double U_ATOMIC_MASS_UNIT_INVERSE_METER_RELATIONSHIP_2018;/**< m^-1 */
ADD_IMPORT extern const double ATOMIC_MASS_UNIT_JOULE_RELATIONSHIP_2018;/**< J */
ADD_IMPORT extern const double U_ATOMIC_MASS_UNIT_JOULE_RELATIONSHIP_2018;/**< J */
ADD_IMPORT extern const double ATOMIC_MASS_UNIT_KELVIN_RELATIONSHIP_2018;/**< K */
ADD_IMPORT extern const double U_ATOMIC_MASS_UNIT_KELVIN_RELATIONSHIP_2018;/**< K */
ADD_IMPORT extern const double ATOMIC_MASS_UNIT_KILOGRAM_RELATIONSHIP_2018;/**< kg */
ADD_IMPORT extern const double U_ATOMIC_MASS_UNIT_KILOGRAM_RELATIONSHIP_2018;/**< kg */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_1ST_HYPERPOLARIZABILITY_2018;/**< C^3 m^3 J^-2 */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_1ST_HYPERPOLARIZABILITY_2018;/**< C^3 m^3 J^-2 */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_2ND_HYPERPOLARIZABILITY_2018;/**< C^4 m^4 J^-3 */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_2ND_HYPERPOLARIZABILITY_2018;/**< C^4 m^4 J^-3 */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_ACTION_2018;/**< J s */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_ACTION_2018;/**< J s */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_CHARGE_2018;/**< C */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_CHARGE_2018;/**< C */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_CHARGE_DENSITY_2018;/**< C m^-3 */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_CHARGE_DENSITY_2018;/**< C m^-3 */