src/codata_constants_2018.f90

module codata__constants_2018
!! Constants 2018 - autogenerated.
use iso_fortran_env
use iso_c_binding
implicit none
private
 
integer(int32), parameter, public :: YEAR_2018 = 2018
integer(c_int), protected, public, bind(C,name="YEAR_2018") ::capi_YEAR_2018 = YEAR_2018

real(real64), parameter, public :: ALPHA_PARTICLE_ELECTRON_MASS_RATIO_2018=7294.29954142d0 !! 
real(real64), parameter, public :: U_ALPHA_PARTICLE_ELECTRON_MASS_RATIO_2018=0.00000024d0 !! 

real(c_double), protected, public, bind(C,name="ALPHA_PARTICLE_ELECTRON_MASS_RATIO_2018"):: &
capi_001_2018=ALPHA_PARTICLE_ELECTRON_MASS_RATIO_2018
real(c_double), protected, public, bind(C,name="U_ALPHA_PARTICLE_ELECTRON_MASS_RATIO_2018") :: &
capi_U_001_2018=U_ALPHA_PARTICLE_ELECTRON_MASS_RATIO_2018

real(real64), parameter, public :: ALPHA_PARTICLE_MASS_2018=6.6446573357d-27 !! kg
real(real64), parameter, public :: U_ALPHA_PARTICLE_MASS_2018=0.0000000020d-27 !! kg

real(c_double), protected, public, bind(C,name="ALPHA_PARTICLE_MASS_2018"):: &
capi_002_2018=ALPHA_PARTICLE_MASS_2018
real(c_double), protected, public, bind(C,name="U_ALPHA_PARTICLE_MASS_2018") :: &
capi_U_002_2018=U_ALPHA_PARTICLE_MASS_2018

real(real64), parameter, public :: ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_2018=5.9719201914d-10 !! J
real(real64), parameter, public :: U_ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_2018=0.0000000018d-10 !! J

real(c_double), protected, public, bind(C,name="ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_2018"):: &
capi_003_2018=ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_2018
real(c_double), protected, public, bind(C,name="U_ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_2018") :: &
capi_U_003_2018=U_ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_2018

real(real64), parameter, public :: ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_IN_MEV_2018=3727.3794066d0 !! MeV
real(real64), parameter, public :: U_ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_IN_MEV_2018=0.0000011d0 !! MeV

real(c_double), protected, public, bind(C,name="ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_IN_MEV_2018"):: &
capi_004_2018=ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_IN_MEV_2018
real(c_double), protected, public, bind(C,name="U_ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_IN_MEV_2018") :: &
capi_U_004_2018=U_ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_IN_MEV_2018

real(real64), parameter, public :: ALPHA_PARTICLE_MASS_IN_U_2018=4.001506179127d0 !! u
real(real64), parameter, public :: U_ALPHA_PARTICLE_MASS_IN_U_2018=0.000000000063d0 !! u

real(c_double), protected, public, bind(C,name="ALPHA_PARTICLE_MASS_IN_U_2018"):: &
capi_005_2018=ALPHA_PARTICLE_MASS_IN_U_2018
real(c_double), protected, public, bind(C,name="U_ALPHA_PARTICLE_MASS_IN_U_2018") :: &
capi_U_005_2018=U_ALPHA_PARTICLE_MASS_IN_U_2018

real(real64), parameter, public :: ALPHA_PARTICLE_MOLAR_MASS_2018=4.0015061777d-3 !! kg mol^-1
real(real64), parameter, public :: U_ALPHA_PARTICLE_MOLAR_MASS_2018=0.0000000012d-3 !! kg mol^-1

real(c_double), protected, public, bind(C,name="ALPHA_PARTICLE_MOLAR_MASS_2018"):: &
capi_006_2018=ALPHA_PARTICLE_MOLAR_MASS_2018
real(c_double), protected, public, bind(C,name="U_ALPHA_PARTICLE_MOLAR_MASS_2018") :: &
capi_U_006_2018=U_ALPHA_PARTICLE_MOLAR_MASS_2018

real(real64), parameter, public :: ALPHA_PARTICLE_PROTON_MASS_RATIO_2018=3.97259969009d0 !! 
real(real64), parameter, public :: U_ALPHA_PARTICLE_PROTON_MASS_RATIO_2018=0.00000000022d0 !! 

real(c_double), protected, public, bind(C,name="ALPHA_PARTICLE_PROTON_MASS_RATIO_2018"):: &
capi_007_2018=ALPHA_PARTICLE_PROTON_MASS_RATIO_2018
real(c_double), protected, public, bind(C,name="U_ALPHA_PARTICLE_PROTON_MASS_RATIO_2018") :: &
capi_U_007_2018=U_ALPHA_PARTICLE_PROTON_MASS_RATIO_2018

real(real64), parameter, public :: ALPHA_PARTICLE_RELATIVE_ATOMIC_MASS_2018=4.001506179127d0 !! 
real(real64), parameter, public :: U_ALPHA_PARTICLE_RELATIVE_ATOMIC_MASS_2018=0.000000000063d0 !! 

real(c_double), protected, public, bind(C,name="ALPHA_PARTICLE_RELATIVE_ATOMIC_MASS_2018"):: &
capi_008_2018=ALPHA_PARTICLE_RELATIVE_ATOMIC_MASS_2018
real(c_double), protected, public, bind(C,name="U_ALPHA_PARTICLE_RELATIVE_ATOMIC_MASS_2018") :: &
capi_U_008_2018=U_ALPHA_PARTICLE_RELATIVE_ATOMIC_MASS_2018

real(real64), parameter, public :: ANGSTROM_STAR_2018=1.00001495d-10 !! m
real(real64), parameter, public :: U_ANGSTROM_STAR_2018=0.00000090d-10 !! m

real(c_double), protected, public, bind(C,name="ANGSTROM_STAR_2018"):: &
capi_009_2018=ANGSTROM_STAR_2018
real(c_double), protected, public, bind(C,name="U_ANGSTROM_STAR_2018") :: &
capi_U_009_2018=U_ANGSTROM_STAR_2018

real(real64), parameter, public :: ATOMIC_MASS_CONSTANT_2018=1.66053906660d-27 !! kg
real(real64), parameter, public :: U_ATOMIC_MASS_CONSTANT_2018=0.00000000050d-27 !! kg

real(c_double), protected, public, bind(C,name="ATOMIC_MASS_CONSTANT_2018"):: &
capi_010_2018=ATOMIC_MASS_CONSTANT_2018
real(c_double), protected, public, bind(C,name="U_ATOMIC_MASS_CONSTANT_2018") :: &
capi_U_010_2018=U_ATOMIC_MASS_CONSTANT_2018

real(real64), parameter, public :: ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_2018=1.49241808560d-10 !! J
real(real64), parameter, public :: U_ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_2018=0.00000000045d-10 !! J

real(c_double), protected, public, bind(C,name="ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_2018"):: &
capi_011_2018=ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_2018
real(c_double), protected, public, bind(C,name="U_ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_2018") :: &
capi_U_011_2018=U_ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_2018

real(real64), parameter, public :: ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_IN_MEV_2018=931.49410242d0 !! MeV
real(real64), parameter, public :: U_ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_IN_MEV_2018=0.00000028d0 !! MeV

real(c_double), protected, public, bind(C,name="ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_IN_MEV_2018"):: &
capi_012_2018=ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_IN_MEV_2018
real(c_double), protected, public, bind(C,name="U_ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_IN_MEV_2018") :: &
capi_U_012_2018=U_ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_IN_MEV_2018

real(real64), parameter, public :: ATOMIC_MASS_UNIT_ELECTRON_VOLT_RELATIONSHIP_2018=9.3149410242d8 !! eV
real(real64), parameter, public :: U_ATOMIC_MASS_UNIT_ELECTRON_VOLT_RELATIONSHIP_2018=0.0000000028d8 !! eV

real(c_double), protected, public, bind(C,name="ATOMIC_MASS_UNIT_ELECTRON_VOLT_RELATIONSHIP_2018"):: &
capi_013_2018=ATOMIC_MASS_UNIT_ELECTRON_VOLT_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_ATOMIC_MASS_UNIT_ELECTRON_VOLT_RELATIONSHIP_2018") :: &
capi_U_013_2018=U_ATOMIC_MASS_UNIT_ELECTRON_VOLT_RELATIONSHIP_2018

real(real64), parameter, public :: ATOMIC_MASS_UNIT_HARTREE_RELATIONSHIP_2018=3.4231776874d7 !! E_h
real(real64), parameter, public :: U_ATOMIC_MASS_UNIT_HARTREE_RELATIONSHIP_2018=0.0000000010d7 !! E_h

real(c_double), protected, public, bind(C,name="ATOMIC_MASS_UNIT_HARTREE_RELATIONSHIP_2018"):: &
capi_014_2018=ATOMIC_MASS_UNIT_HARTREE_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_ATOMIC_MASS_UNIT_HARTREE_RELATIONSHIP_2018") :: &
capi_U_014_2018=U_ATOMIC_MASS_UNIT_HARTREE_RELATIONSHIP_2018

real(real64), parameter, public :: ATOMIC_MASS_UNIT_HERTZ_RELATIONSHIP_2018=2.25234271871d23 !! Hz
real(real64), parameter, public :: U_ATOMIC_MASS_UNIT_HERTZ_RELATIONSHIP_2018=0.00000000068d23 !! Hz

real(c_double), protected, public, bind(C,name="ATOMIC_MASS_UNIT_HERTZ_RELATIONSHIP_2018"):: &
capi_015_2018=ATOMIC_MASS_UNIT_HERTZ_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_ATOMIC_MASS_UNIT_HERTZ_RELATIONSHIP_2018") :: &
capi_U_015_2018=U_ATOMIC_MASS_UNIT_HERTZ_RELATIONSHIP_2018

real(real64), parameter, public :: ATOMIC_MASS_UNIT_INVERSE_METER_RELATIONSHIP_2018=7.5130066104d14 !! m^-1
real(real64), parameter, public :: U_ATOMIC_MASS_UNIT_INVERSE_METER_RELATIONSHIP_2018=0.0000000023d14 !! m^-1

real(c_double), protected, public, bind(C,name="ATOMIC_MASS_UNIT_INVERSE_METER_RELATIONSHIP_2018"):: &
capi_016_2018=ATOMIC_MASS_UNIT_INVERSE_METER_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_ATOMIC_MASS_UNIT_INVERSE_METER_RELATIONSHIP_2018") :: &
capi_U_016_2018=U_ATOMIC_MASS_UNIT_INVERSE_METER_RELATIONSHIP_2018

real(real64), parameter, public :: ATOMIC_MASS_UNIT_JOULE_RELATIONSHIP_2018=1.49241808560d-10 !! J
real(real64), parameter, public :: U_ATOMIC_MASS_UNIT_JOULE_RELATIONSHIP_2018=0.00000000045d-10 !! J

real(c_double), protected, public, bind(C,name="ATOMIC_MASS_UNIT_JOULE_RELATIONSHIP_2018"):: &
capi_017_2018=ATOMIC_MASS_UNIT_JOULE_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_ATOMIC_MASS_UNIT_JOULE_RELATIONSHIP_2018") :: &
capi_U_017_2018=U_ATOMIC_MASS_UNIT_JOULE_RELATIONSHIP_2018

real(real64), parameter, public :: ATOMIC_MASS_UNIT_KELVIN_RELATIONSHIP_2018=1.08095401916d13 !! K
real(real64), parameter, public :: U_ATOMIC_MASS_UNIT_KELVIN_RELATIONSHIP_2018=0.00000000033d13 !! K

real(c_double), protected, public, bind(C,name="ATOMIC_MASS_UNIT_KELVIN_RELATIONSHIP_2018"):: &
capi_018_2018=ATOMIC_MASS_UNIT_KELVIN_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_ATOMIC_MASS_UNIT_KELVIN_RELATIONSHIP_2018") :: &
capi_U_018_2018=U_ATOMIC_MASS_UNIT_KELVIN_RELATIONSHIP_2018

real(real64), parameter, public :: ATOMIC_MASS_UNIT_KILOGRAM_RELATIONSHIP_2018=1.66053906660d-27 !! kg
real(real64), parameter, public :: U_ATOMIC_MASS_UNIT_KILOGRAM_RELATIONSHIP_2018=0.00000000050d-27 !! kg

real(c_double), protected, public, bind(C,name="ATOMIC_MASS_UNIT_KILOGRAM_RELATIONSHIP_2018"):: &
capi_019_2018=ATOMIC_MASS_UNIT_KILOGRAM_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_ATOMIC_MASS_UNIT_KILOGRAM_RELATIONSHIP_2018") :: &
capi_U_019_2018=U_ATOMIC_MASS_UNIT_KILOGRAM_RELATIONSHIP_2018

real(real64), parameter, public :: ATOMIC_UNIT_OF_1ST_HYPERPOLARIZABILITY_2018=3.2063613061d-53 !! C^3 m^3 J^-2
real(real64), parameter, public :: U_ATOMIC_UNIT_OF_1ST_HYPERPOLARIZABILITY_2018=0.0000000015d-53 !! C^3 m^3 J^-2

real(c_double), protected, public, bind(C,name="ATOMIC_UNIT_OF_1ST_HYPERPOLARIZABILITY_2018"):: &
capi_020_2018=ATOMIC_UNIT_OF_1ST_HYPERPOLARIZABILITY_2018
real(c_double), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_1ST_HYPERPOLARIZABILITY_2018") :: &
capi_U_020_2018=U_ATOMIC_UNIT_OF_1ST_HYPERPOLARIZABILITY_2018

real(real64), parameter, public :: ATOMIC_UNIT_OF_2ND_HYPERPOLARIZABILITY_2018=6.2353799905d-65 !! C^4 m^4 J^-3
real(real64), parameter, public :: U_ATOMIC_UNIT_OF_2ND_HYPERPOLARIZABILITY_2018=0.0000000038d-65 !! C^4 m^4 J^-3

real(c_double), protected, public, bind(C,name="ATOMIC_UNIT_OF_2ND_HYPERPOLARIZABILITY_2018"):: &
capi_021_2018=ATOMIC_UNIT_OF_2ND_HYPERPOLARIZABILITY_2018
real(c_double), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_2ND_HYPERPOLARIZABILITY_2018") :: &
capi_U_021_2018=U_ATOMIC_UNIT_OF_2ND_HYPERPOLARIZABILITY_2018

real(real64), parameter, public :: ATOMIC_UNIT_OF_ACTION_2018=1.054571817d-34 !! J s
real(real64), parameter, public :: U_ATOMIC_UNIT_OF_ACTION_2018=0.0d0 !! J s

real(c_double), protected, public, bind(C,name="ATOMIC_UNIT_OF_ACTION_2018"):: &
capi_022_2018=ATOMIC_UNIT_OF_ACTION_2018
real(c_double), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_ACTION_2018") :: &
capi_U_022_2018=U_ATOMIC_UNIT_OF_ACTION_2018

real(real64), parameter, public :: ATOMIC_UNIT_OF_CHARGE_2018=1.602176634d-19 !! C
real(real64), parameter, public :: U_ATOMIC_UNIT_OF_CHARGE_2018=0.0d0 !! C

real(c_double), protected, public, bind(C,name="ATOMIC_UNIT_OF_CHARGE_2018"):: &
capi_023_2018=ATOMIC_UNIT_OF_CHARGE_2018
real(c_double), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_CHARGE_2018") :: &
capi_U_023_2018=U_ATOMIC_UNIT_OF_CHARGE_2018

real(real64), parameter, public :: ATOMIC_UNIT_OF_CHARGE_DENSITY_2018=1.08120238457d12 !! C m^-3
real(real64), parameter, public :: U_ATOMIC_UNIT_OF_CHARGE_DENSITY_2018=0.00000000049d12 !! C m^-3
